--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proxy server for JQL generation using Gemini API.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.mjs"
   },
   "dependencies": {
     "@google/genai": "^0.15.0",
